2009-07-02  Jb Evain  <jbevain@novell.com>

	* Makefile: build the linker and the tuner in the net_2_0 profile.

2009-04-23  Jb Evain  <jbevain@novell.com>

	* Makefile: add pdb2mdb to the build.

2009-04-23  Jb Evain  <jbevain@novell.com>

	* Makefile: disable moon. Tuning is done by moonlight, which
	will populate back the mcs tree with tuned assemblies for tests.

2009-03-16  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: switch this too.

2009-03-12  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add sqlmetal to the build.

2009-03-10  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: add svcutil to the build.

2008-12-01  Jb Evain  <jbevain@novell.com>

	* Makefile: build the tuner library during the net_1_1 profile. The
	tuning of the net_2_1 assemblies now takes place in moon.

2008-11-21  Jb Evain  <jbevain@novell.com>

	* Makefile: build corcompare only during net_2_0 now.

2008-10-17  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add mod to the build.

2008-10-17  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add mdoc, monodoc to the build.

2008-10-17  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add doc-update target support.

2008-10-17  Jb Evain  <jbevain@novell.com>

	* Makefile: clean the Makefile, following the pattern in ../class,
	to make it easier to add tools.

2008-10-16  Jonathan Pryor <jpryor@novell.com>

	* Makefile (DIST_ONLY_SUBDIRS): Add mono-shlib-cop; fixes the build.

2008-10-16  Jonathan Pryor <jpryor@novell.com>

	* Makefile (SUBDIRS, net_2_0_SUBDIRS): Move mono-shlib-cop to 
	  net_2_0_SUBDIRS so that it can use Mono.Options...

2008-10-09  Zoltan Varga  <vargaz@gmail.com>

	* Makefile (DIST_ONLY_SUBDIRS): Add csharplib.

2008-10-09 Daniel Nauck <dna@mono-project.de>

        * Makefile: add Mono.CSharp to the build

2008-10-01  Jb Evain  <jbevain@novell.com>

	* Makefile: add cil-strip to the build.

2008-09-21  Miguel de Icaza  <miguel@novell.com>
