@@ -2,8 +2,8 @@ thisdir = tools/tuner
 SUBDIRS =
 include ../../build/rules.make
 
-CECIL = $(topdir)/class/lib/net_2_0/Mono.Cecil.dll
-LINKER = $(topdir)/class/lib/net_2_0/monolinker.exe
+CECIL = $(topdir)/class/lib/$(PROFILE)/Mono.Cecil.dll
+LINKER = $(topdir)/class/lib/$(PROFILE)/monolinker.exe
 
 LOCAL_MCS_FLAGS = -r:System.dll -r:System.Xml.dll -r:$(LINKER) -r:$(CECIL)
 
